--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
 }
 .main-header.active{
     
-    background-color: #fff;
+    background-color: #FFFFFF;
     padding: 5px 10px ;
 }
 
@@ -80,8 +80,9 @@
     
 }
 .main-header__link:hover {
-    color: #c6c795;
+    color: #fce168;
     transition: 0.3s;
+    
 }
 .img{
     position: relative;
@@ -102,29 +103,21 @@
 }
 /*end header*/
 /*start cards */
-.card{
-    
-    padding: 60px 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-   
-}
+
 .card-info{
    
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    margin-bottom: 20px;
+   
 }
 .card-info__element{
     width: 100px;
     height: 150px;
     border-style: dotted;
     border-color: #fff;
-    background-color: #f1e195;
+    background-color: #fdf0b5;
     border-radius: 15px ;
     margin: 15px 0px;
     padding: 20px;
@@ -136,17 +129,29 @@
     
 }
 
+
 .card-info__text{
     float: left;
     margin-right: 30px;
+    margin-bottom: 20px;
+    
+}
+.card-info__p{
     margin-bottom: 80px;
+    
+}
+.card-info__title{
+    color: #e4cc60;
+    font-size: 8vw;
 }
 .card-info__parra{
     display: inline;
+    margin-right: 20px;
+   
 }
 
 
-
+/*colleccion*/
 .section{
 position: relative;
   padding-top: 0px;
@@ -182,6 +187,9 @@ position: relative;
     position: absolute;
     top: 100px;
     left: 120px;
+}
+.card-image__img-title{
+    color: #000000;
 }
 .card-title__p{
     position: absolute;
